// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-indépendant > Année incomplète 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . brute: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined"
`;

exports[`calculate simulations-indépendant > Année incomplète 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 3749
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1360
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 2080
indépendant . rémunération . brute: 3749
indépendant . rémunération . nette: 2000
indépendant . rémunération . nette . après impôt: 2000"
`;

exports[`calculate simulations-indépendant > Année incomplète 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 7205
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1567
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 5155
indépendant . rémunération . brute: 7205
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000"
`;

exports[`calculate simulations-indépendant > Année incomplète 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 14082
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 2951
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10302
indépendant . rémunération . brute: 14082
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000"
`;

exports[`calculate simulations-indépendant > Année incomplète 5`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 140741
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 30519
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 103020
indépendant . rémunération . brute: 140741
indépendant . rémunération . nette: 100000
indépendant . rémunération . nette . après impôt: 73817"
`;

exports[`calculate simulations-indépendant > Année incomplète 6`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1272290
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 154818
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 1035085
indépendant . rémunération . brute: 1272290
indépendant . rémunération . nette: 1000000
indépendant . rémunération . nette . après impôt: 528575"
`;

exports[`calculate simulations-indépendant > DROM 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . brute: 20000
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined

Notifications affichées : indépendant . cotisations et contributions . cotisations . exonérations . DROM"
`;

exports[`calculate simulations-indépendant > acre 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 72973
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 17615
indépendant . cotisations et contributions . début activité: 1746
indépendant . revenu professionnel: 51566
indépendant . rémunération . brute: 72973
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41365"
`;

exports[`calculate simulations-indépendant > activité 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 28412
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 6252
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 20610
indépendant . rémunération . brute: 28412
indépendant . rémunération . nette: 20000
indépendant . rémunération . nette . après impôt: 19433"
`;

exports[`calculate simulations-indépendant > activité 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 28440
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 6260
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 20610
indépendant . rémunération . brute: 28440
indépendant . rémunération . nette: 20000
indépendant . rémunération . nette . après impôt: 19433"
`;

exports[`calculate simulations-indépendant > années précédentes 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 87629
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 21221
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 61881
indépendant . rémunération . brute: 87629
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48270"
`;

exports[`calculate simulations-indépendant > années précédentes 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 73208
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . brute: 73208
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: undefined"
`;

exports[`calculate simulations-indépendant > années précédentes 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 59111
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . brute: 59111
indépendant . rémunération . nette: 40000
indépendant . rémunération . nette . après impôt: undefined"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 79445
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 19115
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51705
indépendant . rémunération . brute: 79445
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41323"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 81039
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 19512
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51739
indépendant . rémunération . brute: 81039
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41313"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 85758
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 20691
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51840
indépendant . rémunération . brute: 85758
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41283"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 75026
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 14335
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51610
indépendant . rémunération . brute: 75026
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41352"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 5`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 75028
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 11813
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51610
indépendant . rémunération . brute: 75028
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41352"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 6`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 681523
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 93851
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 517952
indépendant . rémunération . brute: 681523
indépendant . rémunération . nette: 500000
indépendant . rémunération . nette . après impôt: 281970"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . brute: 30000
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . brute: 30000
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . brute: 30000
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . brute: 20000
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 5`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . brute: 300000
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 6`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . brute: 300000
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined"
`;

exports[`calculate simulations-indépendant > cotisations forfaitaires début d'activité 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: 3593
indépendant . revenu professionnel: undefined
indépendant . rémunération . brute: 50000
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined"
`;

exports[`calculate simulations-indépendant > cotisations minimales 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1465
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1185
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 118
indépendant . rémunération . brute: 1465
indépendant . rémunération . nette: 100
indépendant . rémunération . nette . après impôt: 100"
`;

exports[`calculate simulations-indépendant > cotisations minimales 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 220
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 0
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 100
indépendant . rémunération . brute: 220
indépendant . rémunération . nette: 100
indépendant . rémunération . nette . après impôt: 100"
`;

exports[`calculate simulations-indépendant > cotisations minimales 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 967
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 35
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 804
indépendant . rémunération . brute: 967
indépendant . rémunération . nette: 800
indépendant . rémunération . nette . après impôt: 800"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . brute: 45000
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . brute: 9000
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: 1006
indépendant . revenu professionnel: undefined
indépendant . rémunération . brute: 10000
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . brute: 15000
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined"
`;

exports[`calculate simulations-indépendant > exonération âge 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . brute: 55000
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined"
`;

exports[`calculate simulations-indépendant > imposition à l'IR 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 100000
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 23564
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 71284
indépendant . rémunération . brute: 100000
indépendant . rémunération . nette: 69138
indépendant . rémunération . nette . après impôt: 54587"
`;

exports[`calculate simulations-indépendant > impôt sur le revenu 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 28412
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 6252
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 20610
indépendant . rémunération . brute: 28412
indépendant . rémunération . nette: 20000
indépendant . rémunération . nette . après impôt: 17939"
`;

exports[`calculate simulations-indépendant > inversions IR 1`] = `
"entreprise . charges: 1000
entreprise . chiffre d'affaires: 20000
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 4027
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 13897
indépendant . rémunération . brute: 19000
indépendant . rémunération . nette: 13489
indépendant . rémunération . nette . après impôt: 13489"
`;

exports[`calculate simulations-indépendant > inversions IR 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 14082
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 2951
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10302
indépendant . rémunération . brute: 14082
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000"
`;

exports[`calculate simulations-indépendant > inversions IR 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 62309
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 15479
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 43575
indépendant . rémunération . brute: 62309
indépendant . rémunération . nette: 42238
indépendant . rémunération . nette . après impôt: 36000"
`;

exports[`calculate simulations-indépendant > inversions IS 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 14082
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 2951
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10302
indépendant . rémunération . brute: 14082
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000"
`;

exports[`calculate simulations-indépendant > inversions IS 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 14082
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 2951
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10302
indépendant . rémunération . brute: 14082
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000"
`;

exports[`calculate simulations-indépendant > échelle de revenus 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1952
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1225
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 532
indépendant . rémunération . brute: 1952
indépendant . rémunération . nette: 500
indépendant . rémunération . nette . après impôt: 500"
`;

exports[`calculate simulations-indépendant > échelle de revenus 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 2561
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1274
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 1050
indépendant . rémunération . brute: 2561
indépendant . rémunération . nette: 1000
indépendant . rémunération . nette . après impôt: 1000"
`;

exports[`calculate simulations-indépendant > échelle de revenus 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 3168
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1323
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 1567
indépendant . rémunération . brute: 3168
indépendant . rémunération . nette: 1500
indépendant . rémunération . nette . après impôt: 1500"
`;

exports[`calculate simulations-indépendant > échelle de revenus 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 3749
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1360
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 2080
indépendant . rémunération . brute: 3749
indépendant . rémunération . nette: 2000
indépendant . rémunération . nette . après impôt: 2000"
`;

exports[`calculate simulations-indépendant > échelle de revenus 5`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 7205
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1567
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 5155
indépendant . rémunération . brute: 7205
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000"
`;

exports[`calculate simulations-indépendant > échelle de revenus 6`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 14082
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 2951
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10302
indépendant . rémunération . brute: 14082
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000"
`;

exports[`calculate simulations-indépendant > échelle de revenus 7`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 140741
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 30519
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 103020
indépendant . rémunération . brute: 140741
indépendant . rémunération . nette: 100000
indépendant . rémunération . nette . après impôt: 73817"
`;

exports[`calculate simulations-indépendant > échelle de revenus 8`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1272290
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 154818
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 1035085
indépendant . rémunération . brute: 1272290
indépendant . rémunération . nette: 1000000
indépendant . rémunération . nette . après impôt: 528575"
`;
